story router apis
