# backend/src/swagger/openapi.yaml
@@ -213,8 +213,6 @@ components:
         - showBirth
         - isCreator
         - nickname
-        # - likedStoryIds
-        # - followingUserIds
         - profileImageSrc
       properties:
         id:
@@ -237,19 +235,17 @@ components:
     Story:
       type: object
       required:
-        - creatorNickname
+        - creatorId
         - title
         - thumbnailImageSrc
         - category
         - audioFileSrc
-        - likes
-        - createdAt
       properties:
         id:
           type: number
           format: int64
-        creatorNickname:
-          type: string
+        creatorId:
+          type: number
         title:
           type: string
         thumbnailImageSrc:
@@ -270,7 +266,6 @@ components:
       required:
         - userId
         - content
-        - createdAt
       properties:
         id:
           type: number
